tests/negative/meta_capacity_string.urb
n = [1],
n.capacity = "x",
